feat(recommendations): activate lexical recommendation engine v2