@@ -4,33 +4,33 @@ import com.soap.soap.application.exception.InvalidApplicationArgumentException;
 import com.soap.soap.application.exception.UserNotFoundException;
 import com.soap.soap.application.model.PageRequest;
 import com.soap.soap.application.model.PageResult;
-import com.soap.soap.application.model.PedagogicalRecommendationScore;
-import com.soap.soap.application.model.RecommendationShadowCandidate;
+import com.soap.soap.application.model.PlatformReadingSummary;
+import com.soap.soap.application.model.ReadingLexicalEvidence;
+import com.soap.soap.application.model.RecommendationScoreV2;
 import com.soap.soap.application.model.RecommendedPlatformReading;
 import com.soap.soap.application.port.in.RecommendPlatformReadingsPort;
 import com.soap.soap.application.port.out.CurrentUserPort;
 import com.soap.soap.application.port.out.ReadingProgressRepositoryPort;
 import com.soap.soap.application.port.out.ReadingRepositoryPort;
-import com.soap.soap.application.port.out.RecommendationShadowPort;
+import com.soap.soap.application.port.out.ReadingWordFrequencyRepositoryPort;
 import com.soap.soap.application.port.out.UserRepositoryPort;
 import com.soap.soap.application.port.out.UserVocabularyRepositoryPort;
-import com.soap.soap.application.service.PedagogicalRecommendationScorer;
-import com.soap.soap.application.service.PlatformReadingRecommendationCalculator;
-import com.soap.soap.application.service.RecommendationEvidenceV2Calculator;
 import com.soap.soap.application.service.RecommendationReasonEvaluator;
-import com.soap.soap.application.service.TextWordProcessor;
-import com.soap.soap.domain.model.VocabularyStatus;
+import com.soap.soap.application.service.RecommendationScorerV2;
+import com.soap.soap.domain.model.ReadingProgressStatus;
+import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
-import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -38,14 +38,25 @@ import org.springframework.transaction.annotation.Transactional;
 public class RecommendPlatformReadingsUseCase implements RecommendPlatformReadingsPort {
   private static final Logger LOGGER =
       LoggerFactory.getLogger(RecommendPlatformReadingsUseCase.class);
-  private static final Comparator<ScoredReading> RANKING =
+
+  private static final Comparator<ScoredReading> COLD_START_RANKING =
       Comparator.comparingInt(
               (ScoredReading scored) -> progressPriority(scored.reading().progressStatus()))
-          .thenComparing(scored -> scored.score().score(), Comparator.reverseOrder())
+          .thenComparing(scored -> scored.score().finalScore(), Comparator.reverseOrder())
+          .thenComparingInt(scored -> scored.reading().editorialLevel().ordinal())
           .thenComparing(
-              scored -> scored.reading().classificationConfidencePercentage(),
-              Comparator.reverseOrder())
-          .thenComparing(scored -> scored.score().challengePercentage())
+              scored -> scored.reading().createdAt(),
+              Comparator.nullsLast(Comparator.reverseOrder()))
+          .thenComparing(scored -> scored.reading().title())
+          .thenComparing(scored -> scored.reading().readingId());
+
+  private static final Comparator<ScoredReading> MATURE_RANKING =
+      Comparator.comparingInt(
+              (ScoredReading scored) -> progressPriority(scored.reading().progressStatus()))
+          .thenComparing(scored -> scored.score().finalScore(), Comparator.reverseOrder())
+          .thenComparing(
+              scored -> scored.score().classificationConfidence(), Comparator.reverseOrder())
+          .thenComparing(scored -> scored.score().uniqueChallenge())
           .thenComparingInt(scored -> scored.reading().editorialLevel().ordinal())
           .thenComparing(
               scored -> scored.reading().createdAt(),
@@ -57,13 +68,11 @@ public class RecommendPlatformReadingsUseCase implements RecommendPlatformReadin
   private final ReadingRepositoryPort readings;
   private final ReadingProgressRepositoryPort progress;
   private final UserVocabularyRepositoryPort vocabulary;
-  private final TextWordProcessor wordProcessor;
-  private final PlatformReadingRecommendationCalculator calculator;
-  private final PedagogicalRecommendationScorer scorer;
-  private final CurrentUserPort currentUser;
-  private final RecommendationEvidenceV2Calculator v2EvidenceCalculator;
-  private final RecommendationShadowPort shadow;
+  private final ReadingWordFrequencyRepositoryPort frequencyRepository;
+  private final RecommendationScorerV2 scorer;
   private final RecommendationReasonEvaluator reasonEvaluator;
+  private final CurrentUserPort currentUser;
+  private final int minGlobalClassifiedWords;
 
   @Autowired
   public RecommendPlatformReadingsUseCase(
@@ -71,24 +80,20 @@ public class RecommendPlatformReadingsUseCase implements RecommendPlatformReadin
       ReadingRepositoryPort readings,
       ReadingProgressRepositoryPort progress,
       UserVocabularyRepositoryPort vocabulary,
-      TextWordProcessor wordProcessor,
-      PlatformReadingRecommendationCalculator calculator,
-      PedagogicalRecommendationScorer scorer,
+      ReadingWordFrequencyRepositoryPort frequencyRepository,
+      RecommendationScorerV2 scorer,
+      RecommendationReasonEvaluator reasonEvaluator,
       CurrentUserPort currentUser,
-      RecommendationEvidenceV2Calculator v2EvidenceCalculator,
-      RecommendationShadowPort shadow,
-      RecommendationReasonEvaluator reasonEvaluator) {
+      @Value("${recommendation.v2.min-global-classified-words:30}") int minGlobalClassifiedWords) {
     this.users = users;
     this.readings = readings;
     this.progress = progress;
     this.vocabulary = vocabulary;
-    this.wordProcessor = wordProcessor;
-    this.calculator = calculator;
+    this.frequencyRepository = frequencyRepository;
     this.scorer = scorer;
-    this.currentUser = currentUser;
-    this.v2EvidenceCalculator = v2EvidenceCalculator;
-    this.shadow = shadow;
     this.reasonEvaluator = reasonEvaluator;
+    this.currentUser = currentUser;
+    this.minGlobalClassifiedWords = minGlobalClassifiedWords;
   }
 
   public RecommendPlatformReadingsUseCase(
@@ -96,47 +101,20 @@ public class RecommendPlatformReadingsUseCase implements RecommendPlatformReadin
       ReadingRepositoryPort readings,
       ReadingProgressRepositoryPort progress,
       UserVocabularyRepositoryPort vocabulary,
-      TextWordProcessor wordProcessor,
-      PlatformReadingRecommendationCalculator calculator,
-      PedagogicalRecommendationScorer scorer,
-      CurrentUserPort currentUser,
-      RecommendationEvidenceV2Calculator v2EvidenceCalculator,
-      RecommendationShadowPort shadow) {
-    this(
-        users,
-        readings,
-        progress,
-        vocabulary,
-        wordProcessor,
-        calculator,
-        scorer,
-        currentUser,
-        v2EvidenceCalculator,
-        shadow,
-        new RecommendationReasonEvaluator());
-  }
-
-  public RecommendPlatformReadingsUseCase(
-      UserRepositoryPort users,
-      ReadingRepositoryPort readings,
-      ReadingProgressRepositoryPort progress,
-      UserVocabularyRepositoryPort vocabulary,
-      TextWordProcessor wordProcessor,
-      PlatformReadingRecommendationCalculator calculator,
-      PedagogicalRecommendationScorer scorer,
+      ReadingWordFrequencyRepositoryPort frequencyRepository,
+      RecommendationScorerV2 scorer,
+      RecommendationReasonEvaluator reasonEvaluator,
       CurrentUserPort currentUser) {
     this(
         users,
         readings,
         progress,
         vocabulary,
-        wordProcessor,
-        calculator,
+        frequencyRepository,
         scorer,
+        reasonEvaluator,
         currentUser,
-        new RecommendationEvidenceV2Calculator(),
-        ignored -> {},
-        new RecommendationReasonEvaluator());
+        30);
   }
 
   @Override
@@ -150,93 +128,97 @@ public class RecommendPlatformReadingsUseCase implements RecommendPlatformReadin
       throw new UserNotFoundException(userId);
     }
 
-    var candidates =
-        readings.findAllPlatformReadings().stream()
-            .filter(
-                reading -> reading.origin() == com.soap.soap.domain.model.ReadingOrigin.PLATFORM)
-            .toList();
-    var wordsByReading = new LinkedHashMap<UUID, Set<String>>();
-    var tokensByReading = new LinkedHashMap<UUID, java.util.List<TextWordProcessor.Token>>();
-    var wordsByLanguage = new HashMap<String, Set<String>>();
-    for (var reading : candidates) {
-      var tokens = wordProcessor.tokenize(reading.content());
-      tokensByReading.put(reading.id(), tokens);
-      var uniqueWords =
-          tokens.stream()
-              .map(TextWordProcessor.Token::normalizedValue)
-              .collect(Collectors.toUnmodifiableSet());
-      wordsByReading.put(reading.id(), uniqueWords);
-      wordsByLanguage
-          .computeIfAbsent(reading.language(), ignored -> new HashSet<>())
-          .addAll(uniqueWords);
+    // 1. Load candidate summaries without content TEXT
+    List<PlatformReadingSummary> candidates = readings.findAllPlatformReadingSummaries();
+    if (candidates.isEmpty()) {
+      return new PageResult<>(List.of(), pageRequest.page(), pageRequest.size(), 0);
     }
 
-    var statusesByLanguage = new HashMap<String, Map<String, VocabularyStatus>>();
-    wordsByLanguage.forEach(
-        (language, words) ->
-            statusesByLanguage.put(
-                language,
-                words.isEmpty()
-                    ? Map.of()
-                    : vocabulary.findStatusesByNormalizedValues(userId, language, words)));
-
-    var calculated =
+    // 2 & 3. Group candidates by language to batch query lexical evidence and cold-start state
+    Map<String, List<UUID>> candidatesByLanguage =
         candidates.stream()
-            .map(
-                reading ->
-                    calculator.calculate(
-                        reading,
-                        wordsByReading.get(reading.id()),
-                        statusesByLanguage.getOrDefault(reading.language(), Map.of())))
-            .toList();
-    var progressByReading =
-        progress.findByUserIdAndReadingIds(
-            userId,
-            calculated.stream()
-                .map(RecommendedPlatformReading::readingId)
-                .collect(Collectors.toSet()));
-    var scored =
-        calculated.stream()
-            .map(
-                reading -> {
-                  var progressStatus =
-                      progressByReading.containsKey(reading.readingId())
-                          ? progressByReading.get(reading.readingId()).status()
-                          : null;
-                  var reasonCode =
-                      reasonEvaluator.evaluate(
-                          reading.vocabularyBreakdown(),
-                          reading.classificationConfidencePercentage(),
-                          progressStatus);
-                  var enriched = withProgress(reading, progressStatus, reasonCode);
-                  return new ScoredReading(
-                      enriched,
-                      scorer.score(
-                          reading.vocabularyBreakdown(),
-                          enriched.classificationConfidencePercentage(),
-                          enriched.editorialLevel()));
-                })
-            .toList();
-    var ranked = scored.stream().sorted(RANKING).toList();
-    try {
-      shadow.observe(
-          () ->
-              ranked.stream()
-                  .map(
-                      item ->
-                          new RecommendationShadowCandidate(
-                              item.reading(),
-                              item.score(),
-                              v2EvidenceCalculator.calculate(
-                                  tokensByReading.get(item.reading().readingId()),
-                                  statusesByLanguage.getOrDefault(
-                                      item.reading().language(), Map.of()))))
-                  .toList());
-    } catch (RuntimeException exception) {
-      LOGGER.warn(
-          "recommendation.shadow.integration_failed errorType={}",
-          exception.getClass().getSimpleName());
+            .collect(
+                Collectors.groupingBy(
+                    PlatformReadingSummary::language,
+                    LinkedHashMap::new,
+                    Collectors.mapping(PlatformReadingSummary::id, Collectors.toList())));
+
+    Map<UUID, ReadingLexicalEvidence> evidenceByReadingId = new HashMap<>();
+    Map<String, Boolean> coldStartByLanguage = new HashMap<>();
+
+    for (var entry : candidatesByLanguage.entrySet()) {
+      String language = entry.getKey();
+      List<UUID> ids = entry.getValue();
+
+      long globalClassified = vocabulary.countClassifiedWordsByUserAndLanguage(userId, language);
+      coldStartByLanguage.put(language, globalClassified < minGlobalClassifiedWords);
+
+      List<ReadingLexicalEvidence> evidenceList =
+          frequencyRepository.findLexicalEvidenceByUserAndLanguage(userId, language, ids);
+      for (var evidence : evidenceList) {
+        evidenceByReadingId.put(evidence.readingId(), evidence);
+      }
     }
+
+    // 4. Batch query reading progress for candidates
+    List<UUID> candidateIds = candidates.stream().map(PlatformReadingSummary::id).toList();
+    var progressByReading = progress.findByUserIdAndReadingIds(userId, new HashSet<>(candidateIds));
+
+    // 5. Score and filter candidates
+    boolean hasAnyColdStart = coldStartByLanguage.values().stream().anyMatch(Boolean::booleanValue);
+    List<ScoredReading> scored = new ArrayList<>(candidates.size());
+    for (PlatformReadingSummary candidate : candidates) {
+      ReadingLexicalEvidence evidence = evidenceByReadingId.get(candidate.id());
+      if (evidence == null) {
+        LOGGER.warn("recommendation.missing_lexical_profile readingId={}", candidate.id());
+        continue;
+      }
+
+      var progressRecord = progressByReading.get(candidate.id());
+      var progressStatus = progressRecord != null ? progressRecord.status() : null;
+
+      boolean candidateColdStart = coldStartByLanguage.getOrDefault(candidate.language(), true);
+      RecommendationScoreV2 score =
+          scorer.score(evidence, candidate.editorialLevel(), candidateColdStart);
+
+      var reasonCode =
+          reasonEvaluator.evaluate(
+              progressStatus,
+              candidateColdStart,
+              score.insufficientEvidence(),
+              score.classificationConfidence(),
+              score.knownTokenCoverage(),
+              score.learningUniqueRatio(),
+              score.uniqueChallenge());
+
+      RecommendedPlatformReading reading =
+          new RecommendedPlatformReading(
+              candidate.id(),
+              candidate.title(),
+              candidate.language(),
+              candidate.editorialLevel(),
+              candidate.category(),
+              candidate.createdAt(),
+              evidence.totalUnique(),
+              evidence.knownUnique(),
+              evidence.learningUnique(),
+              evidence.explicitNewUnique(),
+              evidence.ignoredUnique(),
+              evidence.unclassifiedUnique(),
+              score.knownComfort(),
+              score.classificationConfidence(),
+              progressStatus,
+              candidate.coverKey(),
+              reasonCode);
+
+      scored.add(new ScoredReading(reading, score));
+    }
+
+    // 6. Rank deterministically (cold start vs mature)
+    Comparator<ScoredReading> comparator = hasAnyColdStart ? COLD_START_RANKING : MATURE_RANKING;
+    List<ScoredReading> ranked = scored.stream().sorted(comparator).toList();
+
+    // 7. Paginate
     var from = Math.min((long) pageRequest.page() * pageRequest.size(), ranked.size());
     var to = Math.min(from + pageRequest.size(), ranked.size());
     var selected =
@@ -244,37 +226,15 @@ public class RecommendPlatformReadingsUseCase implements RecommendPlatformReadin
     return new PageResult<>(selected, pageRequest.page(), pageRequest.size(), ranked.size());
   }
 
-  private static RecommendedPlatformReading withProgress(
-      RecommendedPlatformReading reading,
-      com.soap.soap.domain.model.ReadingProgressStatus progressStatus,
-      com.soap.soap.domain.model.RecommendationReasonCode reasonCode) {
-    return new RecommendedPlatformReading(
-        reading.readingId(),
-        reading.title(),
-        reading.language(),
-        reading.editorialLevel(),
-        reading.category(),
-        reading.createdAt(),
-        reading.uniqueWords(),
-        reading.knownWords(),
-        reading.learningWords(),
-        reading.explicitNewWords(),
-        reading.ignoredWords(),
-        reading.unclassifiedWords(),
-        reading.vocabularyFitPercentage(),
-        reading.classificationConfidencePercentage(),
-        progressStatus,
-        reading.coverKey(),
-        reasonCode);
-  }
-
-  private static int progressPriority(com.soap.soap.domain.model.ReadingProgressStatus status) {
-    if (status == null) {
+  private static int progressPriority(ReadingProgressStatus status) {
+    if (status == ReadingProgressStatus.IN_PROGRESS) {
       return 0;
     }
-    return status == com.soap.soap.domain.model.ReadingProgressStatus.IN_PROGRESS ? 1 : 2;
+    if (status == null) {
+      return 1;
+    }
+    return 2; // COMPLETED
   }
 
-  private record ScoredReading(
-      RecommendedPlatformReading reading, PedagogicalRecommendationScore score) {}
+  private record ScoredReading(RecommendedPlatformReading reading, RecommendationScoreV2 score) {}
 }
