@@ -2,39 +2,37 @@ package com.soap.soap.application.usecase;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import com.soap.soap.application.exception.InvalidApplicationArgumentException;
+import com.soap.soap.application.exception.UserNotFoundException;
 import com.soap.soap.application.model.PageRequest;
+import com.soap.soap.application.model.PlatformReadingSummary;
+import com.soap.soap.application.model.ReadingLexicalEvidence;
+import com.soap.soap.application.model.RecommendedPlatformReading;
 import com.soap.soap.application.port.out.CurrentUserPort;
 import com.soap.soap.application.port.out.ReadingProgressRepositoryPort;
 import com.soap.soap.application.port.out.ReadingRepositoryPort;
-import com.soap.soap.application.port.out.RecommendationShadowPort;
+import com.soap.soap.application.port.out.ReadingWordFrequencyRepositoryPort;
 import com.soap.soap.application.port.out.UserRepositoryPort;
 import com.soap.soap.application.port.out.UserVocabularyRepositoryPort;
-import com.soap.soap.application.service.PedagogicalRecommendationScorer;
-import com.soap.soap.application.service.PlatformReadingRecommendationCalculator;
-import com.soap.soap.application.service.RecommendationEvidenceV2Calculator;
-import com.soap.soap.application.service.TextWordProcessor;
+import com.soap.soap.application.service.RecommendationReasonEvaluator;
+import com.soap.soap.application.service.RecommendationScorerV2;
 import com.soap.soap.domain.model.EditorialLevel;
-import com.soap.soap.domain.model.Reading;
-import com.soap.soap.domain.model.ReadingOrigin;
 import com.soap.soap.domain.model.ReadingProgress;
 import com.soap.soap.domain.model.ReadingProgressStatus;
 import com.soap.soap.domain.model.RecommendationReasonCode;
-import com.soap.soap.domain.model.User;
-import com.soap.soap.domain.model.VocabularyStatus;
 import java.time.LocalDateTime;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
@@ -46,8 +44,11 @@ class RecommendPlatformReadingsUseCaseTest {
   @Mock private ReadingRepositoryPort readings;
   @Mock private ReadingProgressRepositoryPort progress;
   @Mock private UserVocabularyRepositoryPort vocabulary;
+  @Mock private ReadingWordFrequencyRepositoryPort frequencyRepository;
   @Mock private CurrentUserPort currentUser;
-  @Mock private RecommendationShadowPort shadow;
+
+  private final RecommendationScorerV2 scorer = new RecommendationScorerV2();
+  private final RecommendationReasonEvaluator reasonEvaluator = new RecommendationReasonEvaluator();
 
   private UUID userId;
   private RecommendPlatformReadingsUseCase useCase;
@@ -62,390 +63,297 @@ class RecommendPlatformReadingsUseCaseTest {
             readings,
             progress,
             vocabulary,
-            new TextWordProcessor(),
-            new PlatformReadingRecommendationCalculator(),
-            new PedagogicalRecommendationScorer(),
+            frequencyRepository,
+            scorer,
+            reasonEvaluator,
             currentUser,
-            new RecommendationEvidenceV2Calculator(),
-            shadow);
+            30);
   }
 
   @Test
-  void ranksPedagogicallyPrioritizesProgressAndExcludesUserReadings() {
-    var higherFit = platform("Higher fit", "known", 1);
-    var highConfidence = platform("High confidence", "known new", 2);
-    var lowConfidence = platform("Low confidence", "known familiar one two three four five", 3);
-    var userReading =
-        new Reading(
-            UUID.randomUUID(),
-            new User(userId, "Ada", "ada@example.com"),
-            "Private",
-            "known",
-            "en",
-            LocalDateTime.now());
+  @DisplayName("Prioriza IN_PROGRESS sobre NOT_STARTED y COMPLETED, y mapea breakdown exacto")
+  void ranksPedagogicallyPrioritizesProgressAndMapsBreakdown() {
+    var inProgressSummary = summary("In Progress Book", EditorialLevel.B2, 1);
+    var notStartedSummary = summary("Not Started Book", EditorialLevel.A1, 2);
+    var completedSummary = summary("Completed Book", EditorialLevel.A1, 3);
+
     when(users.existsById(userId)).thenReturn(true);
-    when(readings.findAllPlatformReadings())
-        .thenReturn(List.of(userReading, lowConfidence, highConfidence, higherFit));
-    when(vocabulary.findStatusesByNormalizedValues(
-            eq(userId), eq("en"), org.mockito.ArgumentMatchers.any()))
-        .thenReturn(
-            Map.of(
-                "known", VocabularyStatus.KNOWN,
-                "familiar", VocabularyStatus.KNOWN,
-                "new", VocabularyStatus.NEW));
+    when(readings.findAllPlatformReadingSummaries())
+        .thenReturn(List.of(completedSummary, notStartedSummary, inProgressSummary));
+    when(vocabulary.countClassifiedWordsByUserAndLanguage(userId, "en")).thenReturn(50L);
+
+    var inProgressEvidence = evidence(inProgressSummary.id(), 100, 75, 10, 0, 40, 25, 5, 5, 0, 5);
+    var notStartedEvidence = evidence(notStartedSummary.id(), 100, 95, 5, 0, 50, 45, 5, 0, 0, 0);
+    var completedEvidence = evidence(completedSummary.id(), 100, 95, 5, 0, 50, 45, 5, 0, 0, 0);
+
+    when(frequencyRepository.findLexicalEvidenceByUserAndLanguage(
+            eq(userId), eq("en"), org.mockito.ArgumentMatchers.anyCollection()))
+        .thenReturn(List.of(inProgressEvidence, notStartedEvidence, completedEvidence));
+
     when(progress.findByUserIdAndReadingIds(
-            userId, Set.of(higherFit.id(), highConfidence.id(), lowConfidence.id())))
+            eq(userId),
+            eq(Set.of(inProgressSummary.id(), notStartedSummary.id(), completedSummary.id()))))
         .thenReturn(
             Map.of(
-                highConfidence.id(),
+                inProgressSummary.id(),
+                ReadingProgress.inProgress(userId, inProgressSummary.id(), LocalDateTime.now()),
+                completedSummary.id(),
                 ReadingProgress.completed(
-                    userId,
-                    highConfidence.id(),
-                    LocalDateTime.parse("2026-08-30T09:00:00"),
-                    LocalDateTime.parse("2026-08-30T09:10:00"))));
+                    userId, completedSummary.id(), LocalDateTime.now(), LocalDateTime.now())));
 
     var result = useCase.recommendPlatformReadings(new PageRequest(0, 10));
 
+    // IN_PROGRESS (priority 0) MUST win even though its finalScore is lower than A1
     assertThat(result.content())
-        .extracting(com.soap.soap.application.model.RecommendedPlatformReading::title)
-        .containsExactly("Low confidence", "Higher fit", "High confidence")
-        .doesNotContain("Private");
-    assertThat(result.content().get(2).vocabularyFitPercentage()).isEqualByComparingTo("50.00");
-    assertThat(result.content().get(2).classificationConfidencePercentage())
-        .isEqualByComparingTo("100.00");
-    assertThat(result.content().getFirst().vocabularyFitPercentage()).isEqualByComparingTo("50.00");
-    assertThat(result.content().getFirst().classificationConfidencePercentage())
-        .isEqualByComparingTo("28.57");
-    assertThat(result.content().get(2).progressStatus()).isEqualTo(ReadingProgressStatus.COMPLETED);
-    assertThat(result.content().getFirst().progressStatus()).isNull();
-    assertThat(result.content().getFirst().reasonCode())
-        .isEqualTo(RecommendationReasonCode.DISCOVERY);
-    assertThat(result.content().get(1).reasonCode())
-        .isEqualTo(RecommendationReasonCode.HIGH_VOCABULARY_MATCH);
-    assertThat(result.content().get(2).reasonCode())
-        .isEqualTo(RecommendationReasonCode.MORE_CHALLENGING);
-    verify(vocabulary)
-        .findStatusesByNormalizedValues(
-            eq(userId), eq("en"), org.mockito.ArgumentMatchers.anyCollection());
+        .extracting(RecommendedPlatformReading::title)
+        .containsExactly("In Progress Book", "Not Started Book", "Completed Book");
+
+    var first = result.content().get(0);
+    assertThat(first.progressStatus()).isEqualTo(ReadingProgressStatus.IN_PROGRESS);
+    assertThat(first.reasonCode()).isEqualTo(RecommendationReasonCode.CONTINUE_READING);
+
+    var second = result.content().get(1);
+    assertThat(second.progressStatus()).isNull();
+    assertThat(second.vocabularyFitPercentage()).isEqualByComparingTo("100.00");
+    assertThat(second.classificationConfidencePercentage()).isEqualByComparingTo("100.00");
+    assertThat(second.reasonCode()).isEqualTo(RecommendationReasonCode.HIGH_VOCABULARY_MATCH);
+
+    var third = result.content().get(2);
+    assertThat(third.progressStatus()).isEqualTo(ReadingProgressStatus.COMPLETED);
   }
 
   @Test
+  @DisplayName("Paginación ocurre tras el cálculo del ranking global")
   void paginatesOnlyAfterCalculatingTheGlobalRanking() {
+    var b1 = summary("Book 1", EditorialLevel.A1, 1);
+    var b2 = summary("Book 2", EditorialLevel.A2, 2);
+    var b3 = summary("Book 3", EditorialLevel.B1, 3);
+
     when(users.existsById(userId)).thenReturn(true);
-    when(readings.findAllPlatformReadings())
+    when(readings.findAllPlatformReadingSummaries()).thenReturn(List.of(b1, b2, b3));
+    when(vocabulary.countClassifiedWordsByUserAndLanguage(userId, "en"))
+        .thenReturn(0L); // cold start
+
+    when(frequencyRepository.findLexicalEvidenceByUserAndLanguage(
+            eq(userId), eq("en"), org.mockito.ArgumentMatchers.anyCollection()))
         .thenReturn(
             List.of(
-                platform("Unknown", "absent", 1),
-                platform("Known", "known", 2),
-                platform("Learning", "learning", 3)));
-    when(vocabulary.findStatusesByNormalizedValues(
-            eq(userId), eq("en"), org.mockito.ArgumentMatchers.any()))
-        .thenReturn(Map.of("known", VocabularyStatus.KNOWN, "learning", VocabularyStatus.LEARNING));
+                evidence(b1.id(), 100, 0, 0, 0, 30, 0, 0, 0, 0, 30),
+                evidence(b2.id(), 100, 0, 0, 0, 30, 0, 0, 0, 0, 30),
+                evidence(b3.id(), 100, 0, 0, 0, 30, 0, 0, 0, 0, 30)));
+    when(progress.findByUserIdAndReadingIds(eq(userId), any())).thenReturn(Map.of());
 
-    var page = useCase.recommendPlatformReadings(new PageRequest(1, 1));
+    var page1 = useCase.recommendPlatformReadings(new PageRequest(1, 1));
 
-    assertThat(page.totalElements()).isEqualTo(3);
-    assertThat(page.content()).singleElement().extracting("title").isEqualTo("Known");
+    assertThat(page1.totalElements()).isEqualTo(3);
+    assertThat(page1.content())
+        .singleElement()
+        .extracting(RecommendedPlatformReading::title)
+        .isEqualTo("Book 2");
   }
 
   @Test
-  void aUserWithoutVocabularyGetsUnclassifiedWordsAndZeroConfidence() {
-    when(users.existsById(userId)).thenReturn(true);
-    when(readings.findAllPlatformReadings()).thenReturn(List.of(platform("Text", "one two", 1)));
-    when(vocabulary.findStatusesByNormalizedValues(
-            eq(userId), eq("en"), org.mockito.ArgumentMatchers.any()))
-        .thenReturn(Map.of());
-
-    var result = useCase.recommendPlatformReadings(new PageRequest(0, 10)).content().getFirst();
-
-    assertThat(result.explicitNewWords()).isZero();
-    assertThat(result.unclassifiedWords()).isEqualTo(2);
-    assertThat(result.vocabularyFitPercentage()).isEqualByComparingTo("30.00");
-    assertThat(result.classificationConfidencePercentage()).isEqualByComparingTo("0.00");
-  }
-
-  @Test
+  @DisplayName("Validaciones de request y autenticación")
   void validatesTheRequestAfterRequiringAuthentication() {
     assertThatThrownBy(() -> useCase.recommendPlatformReadings(null))
         .isInstanceOf(InvalidApplicationArgumentException.class);
     verify(currentUser).requireUserId();
-    verify(readings, never()).findAllPlatformReadings();
+    verify(readings, never()).findAllPlatformReadingSummaries();
+
+    when(users.existsById(userId)).thenReturn(false);
+    assertThatThrownBy(() -> useCase.recommendPlatformReadings(new PageRequest(0, 10)))
+        .isInstanceOf(UserNotFoundException.class);
   }
 
   @Test
-  void lowerEditorialLevelWinsWhenItsRealVocabularyDistributionFitsBetter() {
-    var a2 = scenario("a", 68, 11, 21, EditorialLevel.A2);
-    var b1 = scenario("b", 40, 5, 55, EditorialLevel.B1);
-    var b2 = scenario("c", 45, 8, 47, EditorialLevel.B2);
+  @DisplayName("Colección vacía devuelve resultado vacío")
+  void emptyCandidatesReturnsEmptyPage() {
     when(users.existsById(userId)).thenReturn(true);
-    when(readings.findAllPlatformReadings()).thenReturn(List.of(b2, b1, a2));
-    when(vocabulary.findStatusesByNormalizedValues(
-            eq(userId), eq("en"), org.mockito.ArgumentMatchers.any()))
-        .thenReturn(statusesFor(a2, b1, b2));
+    when(readings.findAllPlatformReadingSummaries()).thenReturn(List.of());
 
-    var result = useCase.recommendPlatformReadings(new PageRequest(0, 3));
-
-    assertThat(result.content()).extracting("title").containsExactly("a", "c", "b");
-    verify(progress).findByUserIdAndReadingIds(userId, Set.of(a2.id(), b1.id(), b2.id()));
+    var page = useCase.recommendPlatformReadings(new PageRequest(0, 10));
+    assertThat(page.content()).isEmpty();
+    assertThat(page.totalElements()).isEqualTo(0);
   }
 
   @Test
-  void notStartedOutranksInProgressAndCompletedWithoutFilteringEither() {
-    var notStarted = platform("Not started", "known", 1);
-    var inProgress = platform("In progress", "known learning", 2);
-    var completed = platform("Completed", "known learning absent", 3);
+  @DisplayName(
+      "Regresión B: Global cold start ordena A1 > A2 > B1 > B2 > C1 > C2 sin tie-breakers personalizados")
+  void globalColdStartRanksByEditorialPriorAndLevelHierarchyWithoutPersonalTieBreakers() {
+    var a1One = summary("A1 First", EditorialLevel.A1, 1);
+    var a1Two = summary("A1 Second", EditorialLevel.A1, 2);
+    var a2 = summary("A2 Reading", EditorialLevel.A2, 3);
+    var b1 = summary("B1 Reading", EditorialLevel.B1, 4);
+    var b2 = summary("B2 Reading", EditorialLevel.B2, 5);
+    var c1 = summary("C1 Reading", EditorialLevel.C1, 6);
+    var c2 = summary("C2 Reading", EditorialLevel.C2, 7);
+
     when(users.existsById(userId)).thenReturn(true);
-    when(readings.findAllPlatformReadings()).thenReturn(List.of(completed, inProgress, notStarted));
-    when(vocabulary.findStatusesByNormalizedValues(
-            eq(userId), eq("en"), org.mockito.ArgumentMatchers.any()))
-        .thenReturn(Map.of("known", VocabularyStatus.KNOWN, "learning", VocabularyStatus.LEARNING));
-    when(progress.findByUserIdAndReadingIds(
-            userId, Set.of(notStarted.id(), inProgress.id(), completed.id())))
-        .thenReturn(
-            Map.of(
-                inProgress.id(),
-                ReadingProgress.inProgress(userId, inProgress.id(), LocalDateTime.now()),
-                completed.id(),
-                ReadingProgress.completed(
-                    userId, completed.id(), LocalDateTime.now(), LocalDateTime.now())));
+    when(readings.findAllPlatformReadingSummaries())
+        .thenReturn(List.of(c2, b2, a1Two, c1, a2, b1, a1One));
+    // 0 classified words -> Global cold start (< 30)
+    when(vocabulary.countClassifiedWordsByUserAndLanguage(userId, "en")).thenReturn(0L);
 
-    var result = useCase.recommendPlatformReadings(new PageRequest(0, 3));
+    // Give a1Two higher local confidence than a1One to prove localConfidence is NOT used as
+    // tie-breaker
+    var eA1One = evidence(a1One.id(), 100, 0, 0, 0, 50, 0, 0, 0, 0, 50); // 0% confidence
+    var eA1Two = evidence(a1Two.id(), 100, 20, 0, 0, 50, 10, 0, 0, 0, 40); // 20% confidence
+    var eA2 = evidence(a2.id(), 100, 0, 0, 0, 50, 0, 0, 0, 0, 50);
+    var eB1 = evidence(b1.id(), 100, 0, 0, 0, 50, 0, 0, 0, 0, 50);
+    var eB2 = evidence(b2.id(), 100, 0, 0, 0, 50, 0, 0, 0, 0, 50);
+    var eC1 = evidence(c1.id(), 100, 0, 0, 0, 50, 0, 0, 0, 0, 50);
+    var eC2 = evidence(c2.id(), 100, 0, 0, 0, 50, 0, 0, 0, 0, 50);
 
+    when(frequencyRepository.findLexicalEvidenceByUserAndLanguage(eq(userId), eq("en"), any()))
+        .thenReturn(List.of(eA1One, eA1Two, eA2, eB1, eB2, eC1, eC2));
+    when(progress.findByUserIdAndReadingIds(eq(userId), any())).thenReturn(Map.of());
+
+    var result = useCase.recommendPlatformReadings(new PageRequest(0, 10));
+
+    // Order must be A1 (by createdAt DESC), then A2, B1, B2, C1, C2
     assertThat(result.content())
-        .extracting("title")
-        .containsExactly("Not started", "In progress", "Completed");
-  }
+        .extracting(RecommendedPlatformReading::title)
+        .containsExactly(
+            "A1 First",
+            "A1 Second",
+            "A2 Reading",
+            "B1 Reading",
+            "B2 Reading",
+            "C1 Reading",
+            "C2 Reading");
 
-  @Test
-  void returnsAFullDeterministicPageWhenEveryCandidateHasProgress() {
-    var first = platform("First", "known", 1);
-    var second = platform("Second", "learning", 2);
-    var third = platform("Third", "absent", 3);
-    var candidates = List.of(first, second, third);
-    when(users.existsById(userId)).thenReturn(true);
-    when(readings.findAllPlatformReadings()).thenReturn(candidates);
-    when(vocabulary.findStatusesByNormalizedValues(
-            eq(userId), eq("en"), org.mockito.ArgumentMatchers.any()))
-        .thenReturn(Map.of("known", VocabularyStatus.KNOWN, "learning", VocabularyStatus.LEARNING));
-    when(progress.findByUserIdAndReadingIds(userId, Set.of(first.id(), second.id(), third.id())))
-        .thenReturn(
-            Map.of(
-                first.id(), completed(first),
-                second.id(), completed(second),
-                third.id(), completed(third)));
-
-    var firstRun = useCase.recommendPlatformReadings(new PageRequest(0, 3));
-    var secondRun = useCase.recommendPlatformReadings(new PageRequest(0, 3));
-
-    assertThat(firstRun.content())
-        .hasSize(3)
-        .allMatch(reading -> reading.progressStatus() == ReadingProgressStatus.COMPLETED);
-    assertThat(secondRun.content())
-        .extracting("readingId")
-        .containsExactlyElementsOf(
-            firstRun.content().stream().map(item -> item.readingId()).toList());
-  }
-
-  @Test
-  void returnsResultsWhenEveryCandidateIsInProgress() {
-    var first = platform("First active", "known learning", 1);
-    var second = platform("Second active", "known absent", 2);
-    when(users.existsById(userId)).thenReturn(true);
-    when(readings.findAllPlatformReadings()).thenReturn(List.of(first, second));
-    when(vocabulary.findStatusesByNormalizedValues(
-            eq(userId), eq("en"), org.mockito.ArgumentMatchers.any()))
-        .thenReturn(Map.of("known", VocabularyStatus.KNOWN, "learning", VocabularyStatus.LEARNING));
-    when(progress.findByUserIdAndReadingIds(userId, Set.of(first.id(), second.id())))
-        .thenReturn(
-            Map.of(
-                first.id(),
-                ReadingProgress.inProgress(userId, first.id(), LocalDateTime.now()),
-                second.id(),
-                ReadingProgress.inProgress(userId, second.id(), LocalDateTime.now())));
-
-    var result = useCase.recommendPlatformReadings(new PageRequest(0, 2));
-
+    // All should have reason DISCOVERY during global cold start
     assertThat(result.content())
-        .hasSize(2)
-        .allMatch(reading -> reading.progressStatus() == ReadingProgressStatus.IN_PROGRESS);
+        .allMatch(r -> r.reasonCode() == RecommendationReasonCode.DISCOVERY);
   }
 
   @Test
-  void shadowReceivesTheSameCatalogEvidenceWithoutChangingTheV1Order() {
-    var first = platform("First", "known known learning absent", 1);
-    var second = platform("Second", "known absent", 2);
+  @DisplayName(
+      "Regresión A: Usuario mature con vocabulario rico hace ganar a C2 sobre A2 con baja evidencia")
+  void matureUserRanksHighEvidenceC2OverLowEvidenceA2() {
+    var a2LowEvidence = summary("Why Cities Need Trees", EditorialLevel.A2, 1);
+    var c2HighEvidence = summary("A Republic of Echoes", EditorialLevel.C2, 2);
+
     when(users.existsById(userId)).thenReturn(true);
-    when(readings.findAllPlatformReadings()).thenReturn(List.of(second, first));
-    when(vocabulary.findStatusesByNormalizedValues(
-            eq(userId), eq("en"), org.mockito.ArgumentMatchers.any()))
-        .thenReturn(Map.of("known", VocabularyStatus.KNOWN, "learning", VocabularyStatus.LEARNING));
+    when(readings.findAllPlatformReadingSummaries())
+        .thenReturn(List.of(a2LowEvidence, c2HighEvidence));
+    // 50 classified words -> Mature user (>= 30)
+    when(vocabulary.countClassifiedWordsByUserAndLanguage(userId, "en")).thenReturn(50L);
 
-    var result = useCase.recommendPlatformReadings(new PageRequest(0, 2));
-    var supplierCaptor = org.mockito.ArgumentCaptor.forClass(java.util.function.Supplier.class);
-    verify(shadow).observe(supplierCaptor.capture());
-    @SuppressWarnings("unchecked")
-    var shadowCandidates =
-        (List<com.soap.soap.application.model.RecommendationShadowCandidate>)
-            supplierCaptor.getValue().get();
+    // A2: low evidence (total 26 unique, 5 classified = 19.23% confidence, knownTokenCoverage =
+    // 21.43%)
+    var eA2 = evidence(a2LowEvidence.id(), 100, 21, 0, 0, 26, 5, 0, 0, 0, 21);
+    // C2: high evidence (total 50 unique, 43 classified = 86.00% confidence, knownTokenCoverage =
+    // 74.40%, learningUniqueRatio = 7.25%)
+    var eC2 = evidence(c2HighEvidence.id(), 100, 74, 7, 0, 50, 39, 4, 1, 0, 6);
 
-    assertThat(shadowCandidates)
-        .extracting(candidate -> candidate.reading().readingId())
-        .containsExactlyElementsOf(
-            result.content().stream().map(item -> item.readingId()).toList());
-    var firstEvidence =
-        shadowCandidates.stream()
-            .filter(candidate -> candidate.reading().title().equals("First"))
-            .findFirst()
-            .orElseThrow()
-            .v2Evidence();
-    assertThat(firstEvidence.totalTokens()).isEqualTo(4);
-    assertThat(firstEvidence.knownTokens()).isEqualTo(2);
-    assertThat(firstEvidence.learningTokens()).isEqualTo(1);
+    when(frequencyRepository.findLexicalEvidenceByUserAndLanguage(eq(userId), eq("en"), any()))
+        .thenReturn(List.of(eA2, eC2));
+    when(progress.findByUserIdAndReadingIds(eq(userId), any())).thenReturn(Map.of());
+
+    var result = useCase.recommendPlatformReadings(new PageRequest(0, 10));
+
+    // In mature mode, C2 with high evidence and fit outranks A2
+    assertThat(result.content().getFirst().title()).isEqualTo("A Republic of Echoes");
+    assertThat(result.content().get(1).title()).isEqualTo("Why Cities Need Trees");
   }
 
   @Test
-  void shadowAdapterFailureCannotBreakTheProductiveV1Result() {
-    var reading = platform("Productive", "known", 1);
+  @DisplayName(
+      "Regresión G: Lectura PLATFORM sin perfil léxico es omitida silenciosamente para el usuario y se emite WARN")
+  void platformReadingWithoutLexicalProfileIsOmitted() {
+    var validReading = summary("Valid Reading", EditorialLevel.A1, 1);
+    var corruptReading = summary("Missing Index Reading", EditorialLevel.A1, 2);
+
     when(users.existsById(userId)).thenReturn(true);
-    when(readings.findAllPlatformReadings()).thenReturn(List.of(reading));
-    when(vocabulary.findStatusesByNormalizedValues(userId, "en", Set.of("known")))
-        .thenReturn(Map.of("known", VocabularyStatus.KNOWN));
-    doThrow(new IllegalStateException("shadow failed"))
-        .when(shadow)
-        .observe(org.mockito.ArgumentMatchers.any());
+    when(readings.findAllPlatformReadingSummaries())
+        .thenReturn(List.of(validReading, corruptReading));
+    when(vocabulary.countClassifiedWordsByUserAndLanguage(userId, "en")).thenReturn(0L);
 
-    var result = useCase.recommendPlatformReadings(new PageRequest(0, 1));
+    // Only validReading has lexical evidence in the DB
+    var validEvidence = evidence(validReading.id(), 100, 0, 0, 0, 30, 0, 0, 0, 0, 30);
+    when(frequencyRepository.findLexicalEvidenceByUserAndLanguage(eq(userId), eq("en"), any()))
+        .thenReturn(List.of(validEvidence));
+    when(progress.findByUserIdAndReadingIds(eq(userId), any())).thenReturn(Map.of());
 
-    assertThat(result.content()).singleElement().extracting("title").isEqualTo("Productive");
+    var result = useCase.recommendPlatformReadings(new PageRequest(0, 10));
+
+    // Response must ONLY contain the valid reading
+    assertThat(result.content())
+        .singleElement()
+        .extracting(RecommendedPlatformReading::title)
+        .isEqualTo("Valid Reading");
+    assertThat(result.totalElements()).isEqualTo(1);
   }
 
-  private Reading platform(String title, String content, int minute) {
-    return platform(title, content, minute, EditorialLevel.A1);
+  @Test
+  @DisplayName("Umbral de 30 palabras clasificadas conmuta entre cold start y mature")
+  void classifiedWordsThresholdBoundary() {
+    var a1 = summary("A1 Easy", EditorialLevel.A1, 1);
+    var b1 = summary("B1 Well-Known", EditorialLevel.B1, 2);
+
+    when(users.existsById(userId)).thenReturn(true);
+    when(readings.findAllPlatformReadingSummaries()).thenReturn(List.of(b1, a1));
+
+    // A1 has low fit, B1 has very high fit
+    var eA1 = evidence(a1.id(), 100, 10, 0, 0, 40, 4, 0, 0, 0, 36);
+    var eB1 = evidence(b1.id(), 100, 95, 0, 0, 40, 40, 0, 0, 0, 0);
+
+    when(frequencyRepository.findLexicalEvidenceByUserAndLanguage(eq(userId), eq("en"), any()))
+        .thenReturn(List.of(eA1, eB1));
+    when(progress.findByUserIdAndReadingIds(eq(userId), any())).thenReturn(Map.of());
+
+    // 1. 29 words -> Cold start (A1 wins because editorialPrior of A1 = 70 > B1 = 62)
+    when(vocabulary.countClassifiedWordsByUserAndLanguage(userId, "en")).thenReturn(29L);
+    var coldResult = useCase.recommendPlatformReadings(new PageRequest(0, 10));
+    assertThat(coldResult.content().getFirst().title()).isEqualTo("A1 Easy");
+
+    // 2. 30 words -> Mature mode (B1 wins because personalized score is high and confident)
+    when(vocabulary.countClassifiedWordsByUserAndLanguage(userId, "en")).thenReturn(30L);
+    var matureResult = useCase.recommendPlatformReadings(new PageRequest(0, 10));
+    assertThat(matureResult.content().getFirst().title()).isEqualTo("B1 Well-Known");
+
+    // 3. 31 words -> Mature mode
+    when(vocabulary.countClassifiedWordsByUserAndLanguage(userId, "en")).thenReturn(31L);
+    var matureResult2 = useCase.recommendPlatformReadings(new PageRequest(0, 10));
+    assertThat(matureResult2.content().getFirst().title()).isEqualTo("B1 Well-Known");
   }
 
-  private Reading platform(
-      String title, String content, int minute, EditorialLevel editorialLevel) {
-    return new Reading(
+  private PlatformReadingSummary summary(String title, EditorialLevel level, int daysAgo) {
+    return new PlatformReadingSummary(
         UUID.randomUUID(),
-        null,
         title,
-        content,
         "en",
-        LocalDateTime.parse("2026-08-29T12:00:00").plusMinutes(minute),
-        ReadingOrigin.PLATFORM,
-        editorialLevel,
-        "Test");
+        level,
+        "General",
+        LocalDateTime.now().minusDays(daysAgo),
+        null,
+        "covers/" + title.toLowerCase().replace(' ', '_') + ".jpg");
   }
 
-  private Reading scenario(
-      String prefix, int known, int learning, int unknown, EditorialLevel level) {
-    var words = new java.util.ArrayList<String>();
-    for (var index = 0; index < known; index++) words.add(prefix + "known" + letters(index));
-    for (var index = 0; index < learning; index++) words.add(prefix + "learning" + letters(index));
-    for (var index = 0; index < unknown; index++) words.add(prefix + "unknown" + letters(index));
-    return platform(prefix, String.join(" ", words), level.ordinal(), level);
-  }
-
-  private Map<String, VocabularyStatus> statusesFor(Reading... candidates) {
-    var statuses = new HashMap<String, VocabularyStatus>();
-    for (var candidate : candidates) {
-      for (var word : candidate.content().split(" ")) {
-        if (word.startsWith(candidate.title() + "known")) {
-          statuses.put(word, VocabularyStatus.KNOWN);
-        } else if (word.startsWith(candidate.title() + "learning")) {
-          statuses.put(word, VocabularyStatus.LEARNING);
-        }
-      }
-    }
-    return statuses;
-  }
-
-  private ReadingProgress completed(Reading reading) {
-    return ReadingProgress.completed(
-        userId, reading.id(), LocalDateTime.now(), LocalDateTime.now());
-  }
-
-  @Test
-  void rankingOrderRemainsIdenticalAndUnchangedByReasonCode() {
-    var inProgress = platform("In progress", "worda wordb", 1);
-    var highMatch = platform("High match", "wordc wordd", 2);
-    var lowConfidence = platform("Sparse discovery", "worde wordf wordg wordh wordi wordj", 3);
-
-    when(users.existsById(userId)).thenReturn(true);
-    when(readings.findAllPlatformReadings())
-        .thenReturn(List.of(lowConfidence, inProgress, highMatch));
-    when(vocabulary.findStatusesByNormalizedValues(
-            eq(userId), eq("en"), org.mockito.ArgumentMatchers.any()))
-        .thenReturn(
-            Map.of(
-                "worda", VocabularyStatus.KNOWN,
-                "wordb", VocabularyStatus.KNOWN,
-                "wordc", VocabularyStatus.KNOWN,
-                "wordd", VocabularyStatus.KNOWN,
-                "worde", VocabularyStatus.KNOWN));
-    when(progress.findByUserIdAndReadingIds(eq(userId), org.mockito.ArgumentMatchers.anySet()))
-        .thenReturn(
-            Map.of(
-                inProgress.id(),
-                ReadingProgress.inProgress(userId, inProgress.id(), LocalDateTime.now())));
-
-    var result = useCase.recommendPlatformReadings(new PageRequest(0, 10));
-
-    // El orden pedagógico estándar: lecturas no empezadas (priority 0) primero, luego IN_PROGRESS
-    // (priority 1)
-    assertThat(result.content())
-        .extracting(com.soap.soap.application.model.RecommendedPlatformReading::title)
-        .containsExactly("Sparse discovery", "High match", "In progress");
-
-    // reasonCodes correspondientes evaluados determinísticamente
-    assertThat(result.content().get(0).reasonCode()).isEqualTo(RecommendationReasonCode.DISCOVERY);
-    assertThat(result.content().get(1).reasonCode())
-        .isEqualTo(RecommendationReasonCode.HIGH_VOCABULARY_MATCH);
-    assertThat(result.content().get(2).reasonCode())
-        .isEqualTo(RecommendationReasonCode.CONTINUE_READING);
-  }
-
-  @Test
-  void lowConfidenceSparseClassificationProducesDiscoveryDespiteModerateFit() {
-    // 100 palabras únicas alfabéticas, 10 known, 90 unclassified
-    var words = new java.util.ArrayList<String>();
-    for (var i = 0; i < 100; i++) {
-      words.add("token" + letters(i));
-    }
-    var reading = platform("Moderate Fit Low Confidence", String.join(" ", words), 1);
-
-    when(users.existsById(userId)).thenReturn(true);
-    when(readings.findAllPlatformReadings()).thenReturn(List.of(reading));
-
-    var statusMap = new HashMap<String, VocabularyStatus>();
-    for (var i = 0; i < 10; i++) {
-      statusMap.put("token" + letters(i), VocabularyStatus.KNOWN);
-    }
-    when(vocabulary.findStatusesByNormalizedValues(
-            eq(userId), eq("en"), org.mockito.ArgumentMatchers.any()))
-        .thenReturn(statusMap);
-    when(progress.findByUserIdAndReadingIds(eq(userId), org.mockito.ArgumentMatchers.anySet()))
-        .thenReturn(Map.of());
-
-    var result = useCase.recommendPlatformReadings(new PageRequest(0, 10));
-
-    assertThat(result.content()).hasSize(1);
-    var item = result.content().getFirst();
-    // 100 - (0.7 * 90) = 37.00%
-    assertThat(item.vocabularyFitPercentage()).isEqualByComparingTo("37.00");
-    // 10 / 100 = 10.00%
-    assertThat(item.classificationConfidencePercentage()).isEqualByComparingTo("10.00");
-    // Regla 2: confidence < 20% -> DISCOVERY (evita falsa alta afinidad por fit aislado)
-    assertThat(item.reasonCode()).isEqualTo(RecommendationReasonCode.DISCOVERY);
-  }
-
-  private String letters(int value) {
-    var result = new StringBuilder();
-    var remaining = value;
-    do {
-      result.append((char) ('a' + remaining % 26));
-      remaining = remaining / 26 - 1;
-    } while (remaining >= 0);
-    return result.reverse().toString();
+  private ReadingLexicalEvidence evidence(
+      UUID readingId,
+      int totalTokens,
+      int knownTokens,
+      int learningTokens,
+      int ignoredTokens,
+      int totalUnique,
+      int knownUnique,
+      int learningUnique,
+      int explicitNewUnique,
+      int ignoredUnique,
+      int unclassifiedUnique) {
+    return new ReadingLexicalEvidence(
+        readingId,
+        totalTokens,
+        knownTokens,
+        learningTokens,
+        ignoredTokens,
+        totalUnique,
+        knownUnique,
+        learningUnique,
+        explicitNewUnique,
+        ignoredUnique,
+        unclassifiedUnique);
   }
 }
